# lab_works

./: pyproject.toml
lab1/: main.py
lab2/: main.py
